--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3001
 MONGO_URL = mongodb+srv://eliuser:GGDspkiyLiux7cCZ@cluster0.wn8ffs6.mongodb.net/?retryWrites=true&w=majority
+JWT_KEY = ODACylAvd6nPNnCPr6zCZrF4qgZ4E0qt
