--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cra-template": "1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
